--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,6 @@
           volumes:
             - .:/app
           command: >
-            sh -c "npm install -g pnpm &&
-            pnpm install &&
-            pnpm build &&
-            pnpm start"
+            sh -c "npm install -g pnpm && pnpm install && pnpm build && pnpm start"
           environment:
             NODE_ENV: production
