--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,13 @@
-- name: Generate docker-compose.yml
-  copy:
-    dest: "{{ compose_file }}"
-    content: |
-      version: '3.8'
-      services:
-        shopping-cart:
-          image: node:{{ node_version }}-alpine
-          container_name: shopping-cart
-          working_dir: /app
-          ports:
-            - "3000:3000"
-          volumes:
-            - .:/app
-          command: "sh -c 'npm install -g pnpm && pnpm install && pnpm build && pnpm start'"
-          environment:
-            NODE_ENV: production
+version: '3.8'
+services:
+  shopping-cart:
+    image: node:16-alpine       # node_version = 16
+    container_name: shopping-cart
+    working_dir: /app
+    ports:
+      - "3000:3000"
+    volumes:
+      - .:/app
+    command: "sh -c 'npm install -g pnpm && pnpm install && pnpm build && pnpm start'"
+    environment:
+      NODE_ENV: production
