--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,40 @@
-- name: Generate docker-compose.yml
-  copy:
-    dest: "{{ compose_file }}"
-    content: |
-      version: '3.8'
-      services:
-        shopping-cart:
-          image: node:{{ node_version }}-alpine
-          container_name: shopping-cart
-          working_dir: /app
-          ports:
-            - "3000:3000"
-          volumes:
-            - .:/app
-          command: >
-            sh -c "npm install -g pnpm && pnpm install && pnpm build && pnpm start"
-          environment:
-            NODE_ENV: production
+version: '3.8'
 
+services:
+  install-pnpm:
+    image: node:16-alpine
+    working_dir: /app
+    volumes:
+      - .:/app
+    command: ["npm", "install", "-g", "pnpm"]
+
+  install-deps:
+    image: node:16-alpine
+    working_dir: /app
+    volumes:
+      - .:/app
+    command: ["pnpm", "install"]
+    depends_on:
+      - install-pnpm
+
+  build-app:
+    image: node:16-alpine
+    working_dir: /app
+    volumes:
+      - .:/app
+    command: ["pnpm", "build"]
+    depends_on:
+      - install-deps
+
+  start-app:
+    image: node:16-alpine
+    working_dir: /app
+    ports:
+      - "3000:3000"
+    volumes:
+      - .:/app
+    command: ["pnpm", "start"]
+    depends_on:
+      - build-app
+    environment:
+      NODE_ENV: production
