--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,16 @@
-version: '3.8'
-
-volumes:
-  node_modules_cache:
-
 services:
-  install-pnpm:
+  shopping-cart:
     image: node:16-alpine
     working_dir: /app
     volumes:
       - .:/app
-      - node_modules_cache:/app/node_modules
-    entrypoint: ["npm", "install", "-g", "pnpm"]
-    restart: "no"
-
-  install-deps:
-    image: node:16-alpine
-    working_dir: /app
-    volumes:
-      - .:/app
-      - node_modules_cache:/app/node_modules
-    entrypoint: ["pnpm", "install"]
-    depends_on:
-      - install-pnpm
-    restart: "no"
-
-  build-app:
-    image: node:16-alpine
-    working_dir: /app
-    volumes:
-      - .:/app
-      - node_modules_cache:/app/node_modules
-    entrypoint: ["pnpm", "build"]
-    depends_on:
-      - install-deps
-    restart: "no"
-
-  start-app:
-    image: node:16-alpine
-    working_dir: /app
     ports:
       - "3000:3000"
-    volumes:
-      - .:/app
-      - node_modules_cache:/app/node_modules
-    entrypoint: ["pnpm", "start"]
-    depends_on:
-      - build-app
-    environment:
-      NODE_ENV: production
-    restart: unless-stopped
+    command:
+      - /bin/sh
+      - -c
+      - |
+        npm install -g pnpm
+        pnpm install
+        pnpm build
+        pnpm start
